--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "primeflex": "^2.0.0",
+    "primeicons": "^4.1.0",
+    "primevue": "^3.3.5",
     "vue": "^3.0.0",
-    "vue-material": "^1.0.0-beta-15",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
@@ -27,6 +29,9 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^7.0.0",
-    "prettier": "2.3.0"
+    "postcss": "^8.2.15",
+    "prettier": "2.3.0",
+    "sass": "^1.32.13",
+    "sass-loader": "^11.1.0"
   }
 }
